<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeatureCollection">

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/feature_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="Sleep length"

        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/sleep_atv"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/sleep_atv"
        android:layout_width="@dimen/feature_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Sleep time"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/had_food_atv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/feature_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/had_food"
        android:textAlignment="center"

        app:layout_constraintBottom_toTopOf="@+id/had_food_atv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />


    <AutoCompleteTextView
        android:id="@+id/had_food_atv"
        android:layout_width="@dimen/feature_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/had_food"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sleep_atv"
 />








    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/feature_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/coffee_question"

        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/coffee_atv"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleep_atv" />

    <AutoCompleteTextView
        android:id="@+id/coffee_atv"
        android:layout_width="@dimen/feature_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/coffee_question"
        android:textAlignment="center"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/had_food_atv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />





    <TextView
        android:id="@+id/textView4"
        android:layout_width="@dimen/feature_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/time_of_day"
        android:textAlignment="center"

        app:layout_constraintBottom_toTopOf="@+id/time_of_day_atv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/had_food_atv" />


    <AutoCompleteTextView
        android:id="@+id/time_of_day_atv"
        android:layout_width="@dimen/feature_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/time_of_day"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coffee_atv"
        />







    <TextView
        android:id="@+id/textView5"
        android:layout_width="@dimen/feature_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/feeling"

        android:textAlignment="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffee_atv" />

    <AutoCompleteTextView
        android:id="@+id/feeling_atv"
        android:layout_width="@dimen/feature_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/feeling"
        android:textAlignment="center"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="@dimen/feature_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/extra_thoughts"

        android:textAlignment="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feeling_atv" />


    <EditText
        android:id="@+id/extra_stuff_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="session"
        android:text="Begin training!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




















</androidx.constraintlayout.widget.ConstraintLayout>